--- a/src/main/resources/templates/event.html
+++ b/src/main/resources/templates/event.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.0.2/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}">
     <link rel="stylesheet" th:href="@{/css/lib/datetimepicker.css}">
+    <link rel="stylesheet" th:href="@{/css/src/event.css}">
     <script th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/5.0.2/js/bootstrap.bundle.min.js}"></script>
     <script th:src="@{/webjars/moment/2.29.1/moment.js}"></script>
@@ -15,7 +16,7 @@
 <body>
 <!--/*/ <th:block th:include="fragments/header.html"></th:block> /*/-->
 <div class="container">
-    <form method="post" th:action="@{/event/add}">
+    <form method="post" th:action="@{/event/add}" class="event-form">
         <fieldset>
             <legend>Add a new event</legend>
             <div class="mb-3">
@@ -35,7 +36,6 @@
             <div id="member-list">
             </div>
         </fieldset>
-
         <button type="submit" class="btn btn-success">Создать</button>
         <button id="add-member-btn" type="button" class="btn btn-primary">Добавить участника</button>
     </form>
