--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,12 @@
     <title>Meet Room</title>
     <link rel="stylesheet" th:href="@{/webjars/fullcalendar/5.8.0/main.min.css}">
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.0.2/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/src/calendar.css}">
+    <script th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
     <script th:src="@{/webjars/fullcalendar/5.8.0/main.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/5.0.2/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/webjars/moment/2.29.1/moment.js}"></script>
+    <script th:src="@{/js/src/calendar.js}"></script>
 </head>
 <body>
 <div>
