--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,7 @@
 <header class="py-3 mb-3 border-bottom">
     <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 2fr;">
         <a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none">
-            <span class="fs-3">Meet Room</span>
+            <span class="fs-3">Переговорка</span>
         </a>
 
         <div class="d-flex align-items-center">
@@ -16,7 +16,7 @@
                          class="rounded-circle">
                 </a>
                 <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-                    <li><a class="dropdown-item" th:href="@{/logout}">Sign out</a></li>
+                    <li><a class="dropdown-item" th:href="@{/logout}">Выйти</a></li>
                 </ul>
             </div>
         </div>
