--- a/src/main/resources/templates/event.html
+++ b/src/main/resources/templates/event.html
@@ -11,7 +11,7 @@
     <script th:src="@{/webjars/moment/2.29.1/moment.js}"></script>
     <script th:src="@{/webjars/moment/2.29.1/locale/ru.js}"></script>
     <script th:src="@{/js/lib/datetimepicker.js}"></script>
-    <title>Новое событие</title>
+    <title th:text="#{app.const.newEvent}"></title>
 </head>
 <body>
 <!--/*/ <th:block th:include="fragments/header.html"></th:block> /*/-->
@@ -19,20 +19,20 @@
     <form method="post" th:action="@{/event/add}" th:object="${eventDtoRequest}" class="event-form">
         <div th:each="error : ${#fields.errors('global')}" th:text="${error}" class="alert alert-danger" role="alert"></div>
         <fieldset>
-            <legend>Добавить событие</legend>
+            <legend th:text="#{app.const.addEvent}"></legend>
             <div class="mb-3">
-                <label for="title" class="form-label">Заголовок</label>
+                <label for="title" class="form-label" th:text="#{app.const.title}"></label>
                 <input type="text" class="form-control" id="title" name="title" th:value="*{title}">
                 <div th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="invalid-feedback" style="display: block;"></div>
             </div>
             <div class="mb-3">
-                <label for="startDate" class="form-label">Время начала</label>
+                <label for="startDate" class="form-label" th:text="#{app.const.startTime}"></label>
                 <div id="startDatePicker"></div>
                 <input type="text" class="form-control" hidden id="startDate" name="startDate" th:value="*{startDate}">
                 <div th:if="${#fields.hasErrors('startDate')}" th:errors="*{startDate}" class="invalid-feedback" style="display: block;"></div>
             </div>
             <div class="mb-3">
-                <label for="endDate" class="form-label">Время окончания</label>
+                <label for="endDate" class="form-label" th:text="#{app.const.endTime}"></label>
                 <div id="endDatePicker"></div>
                 <input type="text" class="form-control" hidden id="endDate" name="endDate" th:value="*{endDate}">
                 <div th:if="${#fields.hasErrors('endDate')}" th:errors="*{endDate}" class="invalid-feedback" style="display: block;"></div>
@@ -40,14 +40,14 @@
             <div id="member-list">
                 <div th:each="member, stat : *{members}" class="mb-3 input-group member-input">
                     <span class="input-group-text">@</span>
-                    <input th:value="${member}" class="form-control" name="members[]" placeholder="Email участника...">
-                    <button type="button" class="btn btn-danger remove-member">Удалить</button>
+                    <input th:value="${member}" class="form-control" name="members[]" th:placeholder="#{app.const.memberEmailPlaceholder}">
+                    <button type="button" class="btn btn-danger remove-member" th:text="#{app.const.remove}"></button>
                     <div th:each="error : ${#fields.errors('members[' + stat.index + ']')}" th:text="${error}" class="invalid-feedback" style="display: block;"></div>
                 </div>
             </div>
         </fieldset>
-        <button type="submit" class="btn btn-success">Создать</button>
-        <button id="add-member-btn" type="button" class="btn btn-primary">Добавить участника</button>
+        <button type="submit" class="btn btn-success" th:text="#{app.const.create}"></button>
+        <button id="add-member-btn" type="button" class="btn btn-primary" th:text="#{app.const.addMember}"></button>
     </form>
 </div>
 <script th:src="@{/js/src/event.js}"></script>
