--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Переговорка</title>
+    <title th:text="#{app.title}"></title>
     <link rel="stylesheet" th:href="@{/webjars/fullcalendar/5.8.0/main.min.css}">
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.0.2/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/src/calendar.css}">
