--- a/src/main/resources/templates/event.html
+++ b/src/main/resources/templates/event.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}">
     <link rel="stylesheet" th:href="@{/css/lib/datetimepicker.css}">
     <link rel="stylesheet" th:href="@{/css/src/event.css}">
+    <link rel="shortcut icon" th:href="@{/img/favicon/favicon.ico}" type="image/x-icon">
     <script th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/5.0.2/js/bootstrap.bundle.min.js}"></script>
     <script th:src="@{/webjars/moment/2.29.1/moment.js}"></script>
