--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" th:href="@{/webjars/fullcalendar/5.8.0/main.min.css}">
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.0.2/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/src/calendar.css}">
+    <link rel="shortcut icon" th:href="@{/img/favicon/favicon.ico}" type="image/x-icon">
     <script th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
     <script th:src="@{/webjars/fullcalendar/5.8.0/main.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/5.0.2/js/bootstrap.bundle.min.js}"></script>
