--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,4 @@
-<header class="py-3 mb-3 border-bottom">
+<header class="py-3 mb-3 border-bottom" xmlns:sec="http://www.w3.org/1999/xhtml">
     <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 2fr;">
         <a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none">
             <span th:text="#{app.title}" class="fs-3"></span>
@@ -9,10 +9,10 @@
                 <!--/*@thymesVar id="username" type="java.lang.String"*/-->
                 <div class="fs-4 text-end" th:utext="${username}"></div>
             </div>
-            <div class="flex-shrink-0 dropdown">
+            <div class="flex-shrink-0 dropdown" sec:authorize="isAuthenticated()">
                 <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser2"
                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://github.com/mdo.png" alt="mdo" width="40" height="40"
+                    <img th:src="@{/img/users/default.png}" alt="mdo" width="40" height="40"
                          class="rounded-circle">
                 </a>
                 <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
